// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconDocInfo should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-doc-info "
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    className="fill-color"
    d="M19.41 7.41l-4.82-4.82A2 2 0 0 0 13.17 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8.83a2 2 0 0 0-.59-1.42zM13 16a1 1 0 0 1-2 0v-4a1 1 0 0 1 2 0zm-1-6a1 1 0 1 1 1-1 1 1 0 0 1-1 1z"
    fill="#999"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconDocInfo should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-doc-info test"
  height={100}
  title="title"
  viewBox="0 0 24 24"
  width={200}
>
  <path
    className="fill-color"
    d="M19.41 7.41l-4.82-4.82A2 2 0 0 0 13.17 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8.83a2 2 0 0 0-.59-1.42zM13 16a1 1 0 0 1-2 0v-4a1 1 0 0 1 2 0zm-1-6a1 1 0 1 1 1-1 1 1 0 0 1-1 1z"
    fill="#999"
  />
</AccessibleSVG>
`;
